add css style, doing TOP task to implement simple css

--- a/recipes/lamongan.html
+++ b/recipes/lamongan.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lamongan</title>
+    <link rel="stylesheet" href="./../style.css">
 </head>
 
 <body>
-    <h1>Lamongan</h1>
+    <h1 class='main-title'>Lamongan</h1>
     <img src="./../images/lamongan.jpg" width="320" alt="">
     <h2>"Lamongan Rice," also known as "Pecel Ayam" </h2>
 
