--- a/recipes/mi-ayam.html
+++ b/recipes/mi-ayam.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Ayam</title>
+    <link rel="stylesheet" href="./../style.css">
 </head>
 
 <body>
-    <h1>Mi Ayam</h1>
+    <h1 class="main-title">Mi Ayam</h1>
     <img src="./../images/mie-ayam.jpg" width="320" alt="">
     <h2> 🍜 Chicken Noodle (Mi Ayam)</h2>
     <h3> Ingredients :</h3>
