--- a/recipes/nasi-goreng.html
+++ b/recipes/nasi-goreng.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nasi Goreng</title>
+    <link rel="stylesheet" href="./../style.css">
 </head>
 
 <body>
-    <h1>Nasi Goreng</h1>
+    <h1 class="main-title">Nasi Goreng</h1>
     <img src="./../images/nasi-goreng.jpg" width="320" alt="">
     <h2>Fried Rice also known as "Nasi Goreng"</h2>
     <h3> Ingredients</h3>
